--- a/package.json
+++ b/package.json
@@ -1,24 +1,24 @@
 {
-  "name": "FE_REACT_React",
+  "name": "Pizza-Order",
   "version": "1.0.0",
-  "description": "<img alt=\"Logo\" src=\"https://coderslab.pl/svg/logo-coderslab.svg\" width=\"400\">",
-  "main": "index.js",
+  "description": "",
+  "main": "App.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server --hot -d",
-    "build": "webpack -p"
+    "build": "webpack --mode=production"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/CodersLab-core/FE_REACT_React.git"
+    "url": ""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/CodersLab-core/FE_REACT_React/issues"
+    "url": ""
   },
-  "homepage": "https://github.com/CodersLab-core/FE_REACT_React#readme",
+  "homepage": "",
   "devDependencies": {
     "@babel/core": "^7.4.0",
     "@babel/plugin-proposal-class-properties": "^7.4.0",
